# COFFEE-SHOP-PROJECT

./: README.md  main.py  pyproject.toml
DATA/: atmosphere_desc_df.csv  coffeeshop_df.csv  descriptors_df.csv  specials_desc_df.csv
data/: coffeeshop_df.csv  descriptor_df.csv  reference_df.csv
src/: interface.py  recommender.py
src/assets/: style.css
