[project]
name = "The Williamsburg Cafe Recommendation System"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
