[project]
name = "The_Williamsburg_Cafe_Recommendation_System"
version = "0.1.0"
description = "The program takes user preferences and outputs the top match recommendation for a Williamsburg coffee shop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
